<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    tools:context=".fragments.NewFixtureFragment">

    <LinearLayout
        android:id="@+id/LL_newFixture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_newFixtureName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nfName"
            app:errorEnabled="true"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_newFixtureName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/LL_newFixtureInfo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_newFixtureFootprint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="@string/nfFootprint"
                app:errorEnabled="true"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ET_newFixtureFootprint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_newFixtureMode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/nfMode"
                app:errorEnabled="true"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ET_newFixtureMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_newFixtureManufacturer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nfManufacturer"
            app:errorEnabled="true"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_newFixtureManufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_newFixturePowerConsumption"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nfPowerConsumption"
            app:errorEnabled="true"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_newFixturePowerConsumption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/LL_newFixtureInfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/LL_newFixtureInfo3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TV_fixtureType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fixtureTypeSelection" />

                <CheckBox
                    android:id="@+id/CB_spot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fixtureType_spot" />

                <CheckBox
                    android:id="@+id/CB_wash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fixtureType_wash" />

                <CheckBox
                    android:id="@+id/CB_beam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fixtureType_beam" />

                <CheckBox
                    android:id="@+id/CB_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fixtureType_profile" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL_newFixtureInfo4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TV_lampType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lampTypeSelection" />

                <RadioGroup
                    android:id="@+id/RG_lampType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/RB_discharge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lampType_discharge" />

                    <RadioButton
                        android:id="@+id/RB_led"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lampType_led" />

                    <RadioButton
                        android:id="@+id/RB_incandescent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lampType_incandescent" />

                    <RadioButton
                        android:id="@+id/RB_halogen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lampType_halogen" />

                    <RadioButton
                        android:id="@+id/RB_fluorescent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lampType_fluorescent" />

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/B_saveFixture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/save_fixture" />
    </LinearLayout>
</ScrollView>